--- a/src/themes/default/index.html
+++ b/src/themes/default/index.html
@@ -71,6 +71,7 @@ var totalFormat = { format: true, showCode: true };
         <% } %>
     </li>
 
+        <li><h4 style="text-align: center;">Special Instructions</h4> <textarea name="extraInstructions" rows="4" cols="40" ></textarea></li>
     </ul>
 
       </div>
